# on-policy

./: .gitignore  LICENSE  README.md  environment.yaml  jobscript.sh  mappo-image-trainer.def  notes.txt  requirements.txt  setup.py
onpolicy/: __init__.py  actor.pt  config.py  critic.pt
onpolicy/algorithms/happo/: happo_trainer.py  policy.py
onpolicy/algorithms/hatrpo/: hatrpo_trainer.py  policy.py
onpolicy/algorithms/mat/: mat_trainer.py
onpolicy/algorithms/r_mappo/: r_mappo.py
onpolicy/algorithms/utils/: act.py  cnn.py  distributions.py  mlp.py  popart.py  popart_hatrpo.py  rnn.py  transformer_act.py  util.py
onpolicy/envs/: __init__.py  env_wrappers.py
onpolicy/envs/common_tests/: common_test_generator.py  failing_traj.json
onpolicy/envs/football/: Football_Env.py
onpolicy/envs/hanabi/: CMakeLists.txt  Hanabi_Env.py  __init__.py  clean_all.sh  pyhanabi.cc  pyhanabi.h  pyhanabi.py
onpolicy/envs/hanabi/hanabi_lib/: CMakeLists.txt  canonical_encoders.cc  canonical_encoders.h  hanabi_card.cc  hanabi_card.h  hanabi_game.cc  hanabi_game.h  hanabi_hand.cc  hanabi_hand.h  hanabi_history_item.cc  hanabi_history_item.h  hanabi_move.cc  hanabi_move.h  hanabi_observation.cc  hanabi_observation.h  hanabi_state.cc  hanabi_state.h  observation_encoder.h  util.cc  util.h
onpolicy/envs/mpe/: MPE_env.py  (+1 more)
onpolicy/scripts/: eval_hanabi_forward.sh  render_football.sh  render_mpe.sh  train_football.sh  train_hanabi_forward.sh  train_mpe.sh  train_smac.sh
onpolicy/utils/: multi_discrete.py  popart.py  separated_buffer.py  shared_buffer.py  util.py  valuenorm.py
(+175 files in other folders)
